--- a/.travis.yml
+++ b/.travis.yml
@@ -26,3 +26,14 @@ install:
 script:
 - .travis/${TRAVIS_OS_NAME}/build.sh
 - .travis/${TRAVIS_OS_NAME}/test.sh
+- .travis/${TRAVIS_OS_NAME}/pack.sh
+
+
+after_success:
+  - wget -c https://github.com/probonopd/uploadtool/raw/master/upload.sh
+  - bash upload.sh *.deb
+
+branches:
+  except:
+    - # Do not build tags that we create when we upload to GitHub Releases
+    - /^(?i:continuous)$/
