--- a/Tests/Functional/Python/PyPersistence/CMakeLists.txt
+++ b/Tests/Functional/Python/PyPersistence/CMakeLists.txt
@@ -63,6 +63,8 @@ test_example("simulation/ex06_Reflectometry/BeamFullDivergence" 2e-10)
 test_example("simulation/ex06_Reflectometry/BeamFullDivergence_copy" 2e-10)
 test_example("simulation/ex06_Reflectometry/TimeOfFlightReflectometry" 2e-10)
 test_example("simulation/ex06_Reflectometry/TOFRWithResolution" 2e-10)
+test_example("simulation/ex06_Reflectometry/FootprintCorrection" 2e-10)
+test_example("simulation/ex06_Reflectometry/SpecularSimulationWithRoughness" 2e-10)
 
 test_example("simulation/ex07_Miscellaneous/CylindersInAverageLayer" 2e-10)
 test_example("simulation/ex07_Miscellaneous/DepthProbe" 2e-10)
