--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -16,7 +16,7 @@ environment:
   PYTHONPATH: "%PYTHONDIR%;%PYTHONDIR%\\Lib;%PYTHONDIR%\\Lib\\site-packages;%PYTHONDIR%\\DLLs"
   PYEXE: "%PYTHONDIR%\\python.exe"
   PYLIB: "%PYTHONDIR%\\libs\\python38.lib"
-build: C:/Python38-x64/libs/python38.lib
+build:
   parallel: true
 
 init:
