--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -82,4 +82,4 @@ test_script:
 
 on_failure:
 - appveyor PushArtifact Testing/Temporary/LastTest.log
-#- ps: $blockRdp = $true; iex ((new-object net.webclient).DownloadString('https://raw.githubusercontent.com/appveyor/ci/master/scripts/enable-rdp.ps1'))
+- ps: $blockRdp = $true; iex ((new-object net.webclient).DownloadString('https://raw.githubusercontent.com/appveyor/ci/master/scripts/enable-rdp.ps1'))
