Attempt to switch on Appveyor RDP

--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -81,5 +81,5 @@ test_script:
     }
 
 on_failure:
-- appveyor PushArtifact Testing/Temporary/LastTest.log
+- echo "Going RDP"
 - ps: $blockRdp = $true; iex ((new-object net.webclient).DownloadString('https://raw.githubusercontent.com/appveyor/ci/master/scripts/enable-rdp.ps1'))
