Move fit unit tests under directory Fit/
Preparative step for future separation of fit library.

--- a/Core/CMakeLists.txt
+++ b/Core/CMakeLists.txt
@@ -2,6 +2,8 @@
 # CMakeLists.txt file for building libBornAgainCore library
 ############################################################################
 
+message(STATUS "Configuring BornAgainCore")
+
 set(library_name BornAgainCore)
 
 if(BORNAGAIN_TIDY)
