--- a/Fit/test/unit/CMakeLists.txt
+++ b/Fit/test/unit/CMakeLists.txt
@@ -2,7 +2,9 @@
 # Fit unit tests
 ############################################################################
 
-set(test UnitTestFit)
+include(GoogleTest)
+
+set(test FitUnitTest)
 
 file(GLOB source_files "*.cpp" "run_gtests.cpp")
 
@@ -10,5 +12,4 @@ add_executable(${test} ${source_files})
 target_include_directories(${test} PUBLIC ${gtest_SOURCE_DIR}/include)
 target_link_libraries(${test} PRIVATE ${BornAgainFit_LIBRARY} gtest)
 
-# add execution of TestCore just after compilation
-add_custom_target(${test}_run ALL DEPENDS ${test} COMMAND ${test})
+gtest_discover_tests(${test} TEST_PREFIX Fit:Unit:)
