--- a/Tests/Functional/Core/FitObjective/CMakeLists.txt
+++ b/Tests/Functional/Core/FitObjective/CMakeLists.txt
@@ -24,8 +24,7 @@ file(GLOB source_files "*.cpp")
 file(GLOB include_files "*.h")
 
 add_executable(${test} ${include_files} ${source_files})
-target_include_directories(${test} PRIVATE ../engine)
-target_link_libraries(${test} BornAgainCore BornAgainFitTestMachinery)
+target_link_libraries(${test} BornAgainCore BornAgainTestMachinery)
 
 foreach(test_case ${test_cases})
     add_test(${test}/${test_case} ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/${test} ${test_case})
