tmp: outcomment fit functional tests to investigate Win bug

--- a/Fit/test/CMakeLists.txt
+++ b/Fit/test/CMakeLists.txt
@@ -2,7 +2,7 @@
 add_subdirectory(unit)
 
 # test engine for functional tests
-add_subdirectory(engine)
+#add_subdirectory(engine)
 
 # testing standalone fitting of arbitrary objective functions
-add_subdirectory(Minimizer)
+#add_subdirectory(Minimizer)
