--- a/Tests/Functional/TestMachinery/CMakeLists.txt
+++ b/Tests/Functional/TestMachinery/CMakeLists.txt
@@ -5,18 +5,12 @@
 set(library_name BornAgainTestMachinery)
 
 file(GLOB source_files "*.cpp")
-file(GLOB include_files "*.h")
 
 if(WIN32)
     set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DBA_CORE_BUILD_DLL")
 endif()
 
-# --- making library ---------
-add_library(
-    ${library_name}
-    SHARED
-    ${source_files} ${include_files}
-    )
+add_library(${library_name} SHARED ${source_files})
 
 set_target_properties(${library_name} PROPERTIES PREFIX ${libprefix} SUFFIX ${libsuffix})
 set(${library_name}_LIBRARY_TYPE SHARED)
@@ -24,9 +18,6 @@ set(${library_name}_LIBRARY_TYPE SHARED)
 # exposing library name and list of include directories outside
 set(${library_name}_INCLUDE_DIRS ${include_dirs} PARENT_SCOPE)
 set(${library_name}_LIBRARY ${library_name} PARENT_SCOPE)
-
-
-# --- external dependencies ---------
 
 target_link_libraries(${library_name}
     ${BornAgainCore_LIBRARY}
